# dan-voice

./: .env.example  .gitignore  E2E_VERIFICATION.md  Makefile  README.md  TESTING_STRATEGY.md  install-slash-commands.sh  install.sh  pyproject.toml
.omo/drafts/: fix-tunnel.md
.omo/plans/: fix-tunnel.md
.omo/run-continuation/: ses_0e670651affeZBzaqh7O9IW8xv.json  ses_0e8017538ffeQ76t1qKq8C6PxA.json  ses_0e80221daffe0MQpC5eU3GuSCp.json  ses_0e8027706ffeJVv2YdsCahYMET.json  ses_0e802f9b7ffe850v7WQNFHq7oc.json  ses_0e802fd26ffe2ztUqr7gGGG1dr.json  ses_0e8030190ffe30m753qhvjV2vH.json  ses_0e80306deffe9Y55foAlZGxCVH.json  ses_0e8039bc5ffeNypFSX4GcPKozP.json  ses_0e803d777ffeemRQoh2O5T7B6v.json  ses_0e8045f1fffewb1VyUeSiT2DTf.json  ses_0e80464d6ffeLsTL21BZzKDEe1.json  ses_0e8046a18ffeQ8ky2DjM2C5B3l.json  ses_0e8046f6bffeu66r4A9nBnBZAB.json  ses_0e80477adffei5Xwb8t9PsCTm0.json  ses_0e8059dadffeyOAJwBCpQe1x1g.json  ses_0e805b0aeffe6yFBbMNCNTsn78.json  ses_0e84a77ecffe2FmHPSkD4yV4mW.json  ses_0ec3e5695ffeloy98f2T6hdr5Q.json  ses_0ec3fefceffegfuZHppA5BC5SD.json  ses_0ecf9932dffeOb0xccT2NllRFo.json  ses_0edf6ed1bffeDvT5QN6iKePHRM.json  ses_0f00b3dfeffeBtpXpMFZ9VcwSF.json  ses_0f00d3b29ffeLvO6SKZKbhnQac.json  ses_0f02214f5ffeRejInnmCrPHdPc.json  ses_0f033412dffe2Pgv840qVqIxNA.json  (+11 more)
docs/: TTS-RESEARCH.md
scripts/: setup-tunnel.sh
tests/: conftest.py  test_audio.py  test_integration.py  test_security.py
voice_dani/: __init__.py  __main__.py  audio_handler.py  config.py  main.py  pairing.py  server.py  tts.py
web/: app.js  index.html  manifest.json  styles.css  sw.js
(+2 files in other folders)
