[project]
name = "dan-voice"
version = "0.1.0"
description = "Real-time voice interface for local CLI agents — talk to OpenCode, Claude Code, or any agent from your phone"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "dan", email = "dan@danlab.dev" }
]
license = { text = "MIT" }

dependencies = [
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.32.1",
    "websockets>=13.1",
    "python-multipart>=0.0.12",
    "numpy>=2.0",
    "httpx>=0.27",
    "pydantic>=2.9",
]

[project.optional-dependencies]
stt = [
    "faster-whisper>=1.0",
]
tts = [
    "piper-tts>=1.3.0",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.7",
]

[project.scripts]
dan-voice = "voice_dani.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["voice_dani"]

[tool.hatch.build.targets.wheel.force-include]
"web" = "voice_dani/web"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "S", "C4"]
ignore = ["S101", "B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]